fix in the summary func

--- a/test.ipynb
+++ b/test.ipynb
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -28,7 +28,28 @@
      "text": [
       "(7352, 128, 9) (7352, 1)\n",
       "(2947, 128, 9) (2947, 1)\n",
-      "(7352, 128, 9) (7352, 6) (2947, 128, 9) (2947, 6)\n"
+      "(7352, 128, 9) (7352, 6) (2947, 128, 9) (2947, 6)\n",
+      ">#1: 93.078\n",
+      ">#2: 93.180\n",
+      ">#3: 89.243\n",
+      ">#4: 92.060\n",
+      ">#5: 92.365\n",
+      ">#6: 92.637\n",
+      ">#7: 89.481\n",
+      ">#8: 90.465\n",
+      ">#9: 92.738\n",
+      ">#10: 91.177\n"
+     ]
+    },
+    {
+     "ename": "TypeError",
+     "evalue": "summarize_results() missing 1 required positional argument: 'params'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-2-a241ee356954>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      9\u001b[0m     \u001b[0mscores\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mscore\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     10\u001b[0m \u001b[0;31m# summarize results\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 11\u001b[0;31m \u001b[0msummarize_results\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mscores\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m: summarize_results() missing 1 required positional argument: 'params'"
      ]
     }
    ],
@@ -41,8 +62,36 @@
     "    score = evaluate_model(trainX, trainy, testX, testy)\n",
     "    score = score * 100.0\n",
     "    print('>#%d: %.3f' % (r+1, score))\n",
-    "    scores.append(score)\n",
-    "# summarize results\n",
+    "    scores.append(score)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def summarize_results(scores):\n",
+    "\tprint(scores)\n",
+    "\tm, s = mean(scores), std(scores)\n",
+    "\tprint('Accuracy: %.3f%% (+/-%.3f)' % (m, s))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[93.07770614183916, 93.17950458092976, 89.24329826942655, 92.05972175093315, 92.36511706820495, 92.63657957244655, 89.48082796063794, 90.46487953851374, 92.73837801153716, 91.17746861214795]\n",
+      "Accuracy: 91.642% (+/-1.391)\n"
+     ]
+    }
+   ],
+   "source": [
     "summarize_results(scores)"
    ]
   },
